# wshard

./: .gitignore  LICENSE  MARKET_RELEASE.md  README.md  SECURITY.md
.github/workflows/: ci.yml
bench/: README.md  bench_dataset.py  bench_go_test.go  bench_parquet.py  bench_python.py  bench_realdata.py  bench_streaming.py  go.mod  go.sum
docs/: DEEP_DIVE.md  FAQ.md  FORMAT.md  WHY_NOT_HDF5.md  WHY_NOT_LEROBOT.md
examples/: dreamer_npz_to_wshard.py  dreamer_roundtrip.py  inspect_wshard.py  minari_to_wshard.py  read_cartpole.py  residual_demo.py  streaming_demo.py  write_cartpole.py  wshard_to_lerobot.py
go/: go.mod  go.sum
go/shard/: dtype.go  intconv.go  mmap.go  schema.go  shard.go  shard_format.go  shard_format_test.go  shard_metadata.go  shard_sections.go  tensor_v1.go  tensor_v1_test.go  wshard.go  wshard_chunked.go  (+8 more)
golden/: dtype_zoo.wshard  generate.go  go.mod  go.sum  golden_hashes.json  latent_action.wshard  multimodal.wshard  omen_uncert.wshard  per_block_compressed.wshard  simple_episode.wshard
js/: README.md  package-lock.json  package.json
notes/: MARKETING_BRIEF.md
py/: README.md  pyproject.toml
py/tests/: __init__.py  test_cli.py  test_deepdata_bridge.py  test_dreamer_roundtrip.py  test_interop.py  test_malformed.py  test_wshard.py
py/wshard/: __init__.py  __main__.py  chunked.py  cli.py  compress.py  convert.py  deepdata_bridge.py  dreamer.py  huggingface.py  residual.py  streaming.py  types.py  wshard.py
viewer/: README.md  index.html  package-lock.json  package.json  tsconfig.json
web/: MARKET_RELEASE.html  README.md  index.html
(+9 files in other folders)
